# libafl-dashboard

./: Cargo.toml  README.md
resources/: test.jsonl
src/: index.html  main.rs  monitor.js
