[package]
name = "libafl-dashboard"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "3.2.17", features=["derive"]}
tungstenite = "0.17.3"
notify = "4.0.17"
tiny_http = "0.11.0"